kubernetes/apps/downloads/radarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: notifiarr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: bazarr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: autobrr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: cross-seed
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: unpackerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: maintainerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
  egress:
    # qbittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # sabnzbd
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # prowlarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
